SERVER-13794 - only start snapshot thread on isHttpInterfaceEnabled

Signed-off-by: Matt Kangas <matt.kangas@mongodb.com>